--- a/src/app/services/pupservice-management/pupservice-management.component.html
+++ b/src/app/services/pupservice-management/pupservice-management.component.html
@@ -86,28 +86,28 @@
 
 
   <div class="table-container mat-elevation-z8">
-    <table *ngIf="dataSource" mat-table [dataSource]="dataSource" class="mat-table" matSort>
+    <table mat-table [dataSource]="dataSource" class="mat-table" matSort>
       <!-- Service Name Column -->
       <ng-container matColumnDef="product">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="name"> Name </th>
         <td mat-cell *matCellDef="let element"> {{element.name}} </td>
       </ng-container>
 
       <!-- Description Column -->
       <ng-container matColumnDef="description">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="description"> Description </th>
         <td mat-cell *matCellDef="let element"> {{element.description}} </td>
       </ng-container>
 
       <!-- Base Price Column -->
       <ng-container matColumnDef="basePrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Base Price </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="basePrice"> Base Price </th>
         <td mat-cell *matCellDef="let element"> {{element.price.basePrice}} € </td>
       </ng-container>
 
       <!-- Discount Column -->
       <ng-container matColumnDef="discount">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Discount </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="discount"> Discount </th>
         <td mat-cell *matCellDef="let element">
           {{element.price.discount}}%
           <mat-icon *ngIf="element.discount > 0" [ngStyle]="{'color':'var(--green-color)'}">trending_up</mat-icon>
@@ -117,13 +117,13 @@
 
       <!-- Final Price Column -->
       <ng-container matColumnDef="finalPrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Final Price </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="finalPrice"> Final Price </th>
         <td mat-cell *matCellDef="let element"> {{element.price.finalPrice}} € </td>
       </ng-container>
 
       <!-- Visible Column -->
       <ng-container matColumnDef="visible">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Visible </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="isVisible"> Visible </th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.visible" [ngStyle]="{'color':'var(--green-color)'}">check</mat-icon>
           <mat-icon *ngIf="!element.visible" [ngStyle]="{'color':'var(--error-color)'}">close</mat-icon>
@@ -133,7 +133,7 @@
 
       <!-- Available Column -->
       <ng-container matColumnDef="available">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Available </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="isAvailable"> Available </th>
         <td mat-cell *matCellDef="let element">
           <mat-icon *ngIf="element.available" [ngStyle]="{'color':'var(--green-color)'}">check</mat-icon>
           <mat-icon *ngIf="!element.available" [ngStyle]="{'color':'var(--error-color)'}">close</mat-icon>
@@ -142,19 +142,19 @@
 
       <!-- Duration Column -->
       <ng-container matColumnDef="duration">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Duration </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="durationMinutes"> Duration </th>
         <td mat-cell *matCellDef="let element"> {{element.durationMinutes}} min </td>
       </ng-container>
 
       <!-- Cancellation Window Column -->
       <ng-container matColumnDef="cancellationWindow">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Cancellation Window </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="cancellationWindowDays"> Cancellation Window </th>
         <td mat-cell *matCellDef="let element"> {{element.cancellationWindowDays}} day(s) </td>
       </ng-container>
 
       <!-- Reservation Window Column -->
       <ng-container matColumnDef="reservationWindow">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Reservation Window </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header="reservationWindowDays"> Reservation Window </th>
         <td mat-cell *matCellDef="let element"> {{element.reservationWindowDays}} day(s) </td>
       </ng-container>
 
