--- a/src/app/event/event-card/event-card.component.html
+++ b/src/app/event/event-card/event-card.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>{{event.name}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>{{event.location}}</p>
+      <p>{{event.location.address}}, {{event.location.city}}</p>
       <p>{{event.description}}</p>
     </mat-card-content>
     <mat-card-actions>
