--- a/src/app/services/service-card/service-card.component.html
+++ b/src/app/services/service-card/service-card.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>{{service.name}}</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      <p>{{service.category}}</p>
+      <p>{{service.category.name}}</p>
       <p>{{service.description}}</p>
     </mat-card-content>
     <mat-card-actions>
