--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -77,7 +77,7 @@
         <mat-label>Location</mat-label>
         <mat-select formControlName="location">
           <mat-option *ngFor="let location of locations" [value]="location">
-            {{ location }}
+            {{ location.city }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -107,8 +107,6 @@
         <mat-radio-button value="2">Name</mat-radio-button>
       </mat-radio-group>
 
-
-
       <div class="filter-actions">
         <button mat-mini-fab [ngStyle]="{'background-color':'#073b4c'}" (click)="applyFilters()">
           <mat-icon [ngStyle]="{'color':'white'}">filter_alt</mat-icon>
@@ -132,14 +130,13 @@
 
     </div>
 
-
     <div class="paginator">
       <mat-paginator
-        *ngIf = "pageProperties"
+        *ngIf = "eventPageProperties"
         (page) = "eventPageChanged($event)"
-        [length]="pageProperties.totalCount"
-        [pageIndex]="pageProperties.page"
-        [pageSize] = "pageProperties.pageSize"
+        [length]="eventPageProperties.totalCount"
+        [pageIndex]="eventPageProperties.page"
+        [pageSize] = "eventPageProperties.pageSize"
       >
 
       </mat-paginator>
@@ -155,7 +152,6 @@
     <p class="header2">All services/products</p>
 
     <div class="search-container">
-
 
       <button  class="filter-button" (click)="toggleSolutionFilterPanel()" matTooltip="Filter options">
         <mat-icon class="filter-icon">tune</mat-icon>
@@ -182,7 +178,7 @@
         <mat-label>Category</mat-label>
         <mat-select formControlName="category">
           <mat-option *ngFor="let category of categories" [value]="category">
-            {{ category }}
+            {{ category.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -190,8 +186,8 @@
       <mat-form-field appearance="fill" class="filter-field">
         <mat-label>Event Type</mat-label>
         <mat-select formControlName="eventType" multiple>
-          <mat-option *ngFor="let event of eventTypes" [value]="event">
-            {{ event }}
+          <mat-option *ngFor="let eventType of filteredEventTypes" [value]="eventType">
+            {{ eventType.name }}
           </mat-option>
         </mat-select>
       </mat-form-field>
@@ -220,11 +216,18 @@
         </mat-select>
       </mat-form-field>
 
+      <section class="example-section">
+        <mat-checkbox class="example-margin" [checked]= "showProducts" (change)="showOrHideProducts($event,showProducts)">Products</mat-checkbox>
+        <mat-checkbox class="example-margin" [checked]= "showServices" (change)="showOrHideServices($event,showServices)">Services</mat-checkbox>
+      </section>
+
+
       <mat-radio-group aria-label="Sort by">
         <mat-label>Sort by</mat-label>
-        <mat-radio-button value="1">Price</mat-radio-button>
-        <mat-radio-button value="2">Name</mat-radio-button>
+        <mat-radio-button value="price" (change)="solutionRadioChange($event,solutionSort)">Price</mat-radio-button>
+        <mat-radio-button value="name" (change)="solutionRadioChange($event,solutionSort)">Name</mat-radio-button>
       </mat-radio-group>
+
 
       <div class="filter-actions">
         <button mat-mini-fab [ngStyle]="{'background-color':'#073b4c'}" (click)="applyFilters()">
@@ -252,11 +255,11 @@
 
     <div class="paginator">
       <mat-paginator
-        *ngIf = "pageProperties"
-        (page) = "eventPageChanged($event)"
-        [length]="pageProperties.totalCount"
-        [pageIndex]="pageProperties.page"
-        [pageSize] = "pageProperties.pageSize"
+        *ngIf = "solutionPageProperties"
+        (page) = "solutionPageChanged($event)"
+        [length]="solutionPageProperties.totalCount"
+        [pageIndex]="solutionPageProperties.page"
+        [pageSize] = "solutionPageProperties.pageSize"
               >
 
       </mat-paginator>
