[FIX] - sort by date works

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -106,8 +106,8 @@
       <!-- mozda dodati asc i desc opcije -->
       <mat-radio-group aria-label="Sort by">
         <mat-label>Sort by</mat-label>
-        <mat-radio-button value="date" (change)="eventRadioChange($event,eventSort)" >Date</mat-radio-button>
-        <mat-radio-button value="name" (change)="eventRadioChange($event,eventSort)">Name</mat-radio-button>
+        <mat-radio-button value="time" (change)="eventRadioChange($event)" >Date</mat-radio-button>
+        <mat-radio-button value="name" (change)="eventRadioChange($event)">Name</mat-radio-button>
       </mat-radio-group>
 
       <div class="filter-actions">
