[FIX] - minor fix

--- a/src/app/solutions/solution-page/solution-page.component.html
+++ b/src/app/solutions/solution-page/solution-page.component.html
@@ -63,6 +63,6 @@
   </div>
 </div>
 
-<div class="center-text" *ngIf="notFound">
+<div class="error-message" *ngIf="notFound">
   <p>We were unable to find that product/service.</p>
 </div>
