--- a/src/app/solutions/solution-page/solution-page.component.css
+++ b/src/app/solutions/solution-page/solution-page.component.css
@@ -157,3 +157,15 @@
   height: 100%;
   object-fit: fill;
 }
+
+.error-message {
+  font-size: 3em;
+  color: var(--font-dark-blue);
+  font-variant: all-petite-caps;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
