[ADD] - add invitation module and single event page component

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -270,7 +270,7 @@
   </div>
 </div>
 
-<button class="fixed-button" >
-  <mat-icon>chat</mat-icon> Chat
+<button (click) = "invitePeople()" class="fixed-button" >
+  <mat-icon  >chat</mat-icon> Chat
 </button>
 
