--- a/src/app/invitation/invite-people/invite-people.component.html
+++ b/src/app/invitation/invite-people/invite-people.component.html
@@ -1,4 +1,42 @@
-<p>invite-people works!</p>
+<h2 mat-dialog-title>Invite people</h2>
 <mat-dialog-content>
+  <form [formGroup]="invitePeople">
+    <!-- Input polje sa Invite dugmetom -->
+    <div class="input-pair">
+      <mat-form-field appearance="fill" class="email-input">
+        <mat-label>Email address</mat-label>
+        <input
+          matInput
+          placeholder="Enter email address"
+          formControlName="email"
+        />
+      </mat-form-field>
+<!--      <button mat-mini-fab color="primary" class="invite-button">-->
+<!--        <mat-icon>add</mat-icon>-->
+<!--        Invite-->
+<!--      </button>-->
 
+      <button mat-fab extended class="invite-button">
+        <mat-icon>add</mat-icon>
+        Invite
+      </button>
+    </div>
+
+    <!-- Lista pozvanih emailova sa Delete dugmetom -->
+    <div *ngFor="let email of invitedEmails" class="email-list">
+      <div class="email-item">
+        <span>{{ email }}</span>
+        <button mat-mini-fab color="warn" class="delete-button">
+          <mat-icon>close</mat-icon>
+          Delete
+        </button>
+      </div>
+    </div>
+  </form>
 </mat-dialog-content>
+
+<!-- Dugmad Cancel i Submit -->
+<mat-dialog-actions class="actions-container">
+  <button mat-raised-button mat-dialog-close class="cancel-button">CANCEL</button>
+  <button mat-raised-button color="primary" (click)="invite()" class="submit-button">SUBMIT</button>
+</mat-dialog-actions>
