--- a/src/app/service-provider-page/service-provider-page.component.html
+++ b/src/app/service-provider-page/service-provider-page.component.html
@@ -1,48 +1,63 @@
-<div class="provider-page" *ngIf="provider">
+<div class="page">
+  <h2 class="header">
+    Product/Service Provider
+  </h2>
   <div class="provider-container">
-    <!-- Left Section -->
-    <div class="provider-details">
+    <!-- Left Column -->
+    <div class="provider-first-column">
       <div class="provider-logo">
         <img [src]="provider.profilePicture" alt="Provider Logo" />
-      </div>
-      <div class="provider-info">
-        <h1>{{ provider.companyName }}</h1>
-        <p>Email: {{ provider.companyEmail }}</p>
-        <p>Address: {{ provider.companyLocation.address }}</p>
-        <p>City: {{ provider.companyLocation.city }}</p>
-        <p>Phone: {{ provider.companyPhoneNumber }}</p>
-        <p>
-          <strong>Owner:</strong> {{ provider.name }} {{ provider.surname }}
-          <br />
-        </p>
       </div>
       <div class="rating">
         <mat-icon *ngFor="let star of [1, 2, 3, 4, 5]" [ngClass]="{'filled': star <= provider.rating}">star</mat-icon>
       </div>
     </div>
 
-    <!-- Right Section -->
+    <!-- Middle Column -->
+    <div class="provider-details">
+      <div class="provider-info">
+        <h3>{{ provider.companyName }}</h3>
+        <p>Email: {{ provider.companyEmail }}</p>
+        <p>Address: {{ provider.companyLocation.address }}</p>
+        <p>City: {{ provider.companyLocation.city }}</p>
+        <p>Phone: {{ provider.companyPhoneNumber }}</p>
+        <p>
+          Owner: {{ provider.name }} {{ provider.surname }}
+        </p>
+      </div>
+    </div>
+
+    <!-- Right Column -->
     <div class="provider-description">
-      <p><strong>Description:</strong> {{ provider.companyDescription }}</p>
+      <p><strong>Description:</strong><br/>
+        {{ provider.companyDescription }}
+      </p>
       <div class="action-buttons">
-        <button mat-raised-button color="warn">Block User</button>
-        <button mat-raised-button color="warn">Report Account</button>
+        <button mat-raised-button>BLOCK USER</button>
+        <button mat-raised-button>REPORT ACCOUNT</button>
+      </div>
+    </div>
+
+    <!-- Image Gallery -->
+    <div class="image-gallery">
+      <div class="grid-item">
+        <p-carousel
+          [value]="provider.companyPhotos"
+          [numVisible]="1"
+          [showIndicators]="false"
+          [circular]="true"
+          [autoplayInterval]="5000"
+        >
+          <ng-template pTemplate="item" let-image>
+            <div class="carousel-item">
+              <img [src]="image">
+            </div>
+          </ng-template>
+        </p-carousel>
       </div>
     </div>
   </div>
 
-  <!-- Image Carousel -->
-  <div class="image-gallery">
-    <p-carousel [value]="provider.companyPhotos" [numVisible]="1" [showIndicators]="true" [circular]="true">
-      <ng-template pTemplate="item" let-image>
-        <div class="carousel-item">
-          <img [src]="image" alt="Gallery Image" />
-        </div>
-      </ng-template>
-    </p-carousel>
-  </div>
-
-  <!-- Reviews Section -->
   <div class="reviews">
     <div class="review" *ngFor="let comment of provider.comments" [id]="comment.id">
       <img [src]="comment.author.profilePicture" alt="User profile" />
@@ -52,8 +67,4 @@
       </div>
     </div>
   </div>
-</div>
-
-<div *ngIf="!provider" class="loading">
-  <p>Loading provider information...</p>
 </div>
