--- a/src/app/service-provider-page/service-provider-page.component.css
+++ b/src/app/service-provider-page/service-provider-page.component.css
@@ -144,3 +144,17 @@
   font-size: 1em;
   line-height: 1.5;
 }
+
+.error-message, .loading {
+  font-size: 3em;
+  color: var(--font-dark-blue);
+  font-variant: all-petite-caps;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align: center;
+  line-height: 1.2;
+}
