--- a/src/app/service-provider-page/service-provider-page.component.html
+++ b/src/app/service-provider-page/service-provider-page.component.html
@@ -32,9 +32,9 @@
       <p><strong>Description:</strong><br/>
         {{ provider.companyDescription }}
       </p>
-      <div class="action-buttons">
-        <button mat-raised-button>BLOCK USER</button>
-        <button mat-raised-button>REPORT ACCOUNT</button>
+      <div class="action-buttons" *ngIf="user.id">
+        <button mat-raised-button (click)="block()">BLOCK USER</button>
+        <button mat-raised-button (click)="report()">REPORT ACCOUNT</button>
       </div>
     </div>
 
