[ADD] - add single event page

--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -270,7 +270,7 @@
   </div>
 </div>
 
-<button (click) = "invitePeople()" class="fixed-button" >
+<button class="fixed-button" >
   <mat-icon  >chat</mat-icon> Chat
 </button>
 
