--- a/src/app/profile/profile-page/profile.component.css
+++ b/src/app/profile/profile-page/profile.component.css
@@ -16,31 +16,41 @@ h3 {
   display: flex;
   justify-content: space-between;
   gap: 20px;
-  margin-top: 20px;
 }
 
-.info-section, .owner-section, .photo-section {
-  background-color: white;
-  padding: 20px;
+.profile-picture-section, .user-information-card, .buttons-section{
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   width: 32%;
   display: flex; /* Enable flexbox for layout */
   flex-direction: column; /* Stack elements vertically */
+  justify-content: center;
   align-items: center; /* Center align elements horizontally */
+
   text-align: center; /* Center align text */
+}
+
+.profile-picture-section, .buttons-section {
+}
+
+.information {
+  text-align: left;
+}
+
+
+
+
+.buttons-section {
+  gap: 0.8em; /* Adds spacing between buttons */
 }
 
 .profile-picture {
   max-width: 150px;
-  margin-bottom: 1em; /* Add spacing below the picture */
 }
 
-.office-photo {
-  width: 100%;
-  height: auto;
-  border-radius: 5px;
-}
 
 .btn {
   width: 70%;
@@ -50,6 +60,9 @@ h3 {
   cursor: pointer;
   transition: background-color 0.3s ease, color 0.3s ease;
   margin-top: 1em;
+
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
   display: flex;
   justify-content: center; /* Center content within the button */
   align-items: center;
@@ -62,4 +75,12 @@ h3 {
 
 .btn.deactivate-account {
   background-color: var(--error-color) !important;
+}
+
+
+
+
+
+mat-tab-group {
+  background-color: white;
 }
