--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -30,7 +30,7 @@
         <button mat-raised-button class="btn" *ngIf="this.user.role === 'AUTHENTICATED_USER'">UPGRADE PROFILE</button>
         <button mat-raised-button class="btn"  *ngIf="this.user.role === 'ADMIN'"  [routerLink]="'/admin-dashboard'">ADMIN DASHBOARD</button>
         <button mat-raised-button class="btn" *ngIf="this.user.role === 'EVENT_ORGANIZER'">VIEW MY EVENTS</button>
-        <button mat-raised-button class="btn deactivate-account">DEACTIVATE ACCOUNT</button>
+        <button mat-raised-button class="btn deactivate-account" (click)="openConfirmationDialog()">DEACTIVATE ACCOUNT</button>
       </div>
     </div>
 
