--- a/src/app/profile/profile-page/profile.component.css
+++ b/src/app/profile/profile-page/profile.component.css
@@ -7,7 +7,7 @@ h3 {
 
 .container {
   margin: 0 auto;
-  padding: 20px;
+  padding: 0 20px 20px 20px;
   max-width: 90%;
   color: var(--font-dark-blue);
 }
