--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -38,12 +38,14 @@
 </div>
 <mat-tab-group>
   <mat-tab label="My Calendar">
-
+    <app-profile-calendar></app-profile-calendar>
   </mat-tab>
+
   <mat-tab label="Favorite Events">
-
+    <app-favorite-events></app-favorite-events>
   </mat-tab>
-    <mat-tab label="Favorite Products and Services">
 
+  <mat-tab label="Favorite Products and Services">
+    <app-favorite-solutions></app-favorite-solutions>
   </mat-tab>
 </mat-tab-group>
