--- a/src/app/authentication/register/user-register/user-register.component.html
+++ b/src/app/authentication/register/user-register/user-register.component.html
@@ -1,1 +1,119 @@
-<p>user-register works!</p>
+<div class="register-container">
+  <img src="logo.png" alt="Logo Image" class="register-image">
+  <h3 class="register-title">New user</h3>
+  <label>Please provide us with some information about yourself.</label>
+
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()" class="register-form">
+    <div class="form-grid">
+      <!-- First Column of Inputs -->
+      <div class="form-column">
+        <mat-form-field appearance="fill">
+          <mat-label>Full Name</mat-label>
+          <input matInput placeholder="Full Name" formControlName="fullName" />
+          <mat-error *ngIf="registerForm.get('fullName')?.hasError('required')">Full Name is required</mat-error>
+        </mat-form-field>
+
+<!--        <mat-form-field appearance="fill">-->
+<!--          <mat-label>Email</mat-label>-->
+<!--          <input matInput placeholder="Email" formControlName="email" />-->
+<!--          <mat-error *ngIf="registerForm.get('email')?.hasError('required')">Email is required</mat-error>-->
+<!--          <mat-error *ngIf="registerForm.get('email')?.hasError('email')">Invalid email format</mat-error>-->
+<!--        </mat-form-field>-->
+        <mat-form-field appearance="fill">
+          <mat-label>Email</mat-label>
+          <input
+            matInput
+            [value]="usersEmail"
+            [disabled]="true"
+          />
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input matInput [type]="hidePassword ? 'password' : 'text'" placeholder="Password" formControlName="password" />
+          <button mat-icon-button type="button" (click)="togglePasswordVisibility()" matSuffix>
+            <mat-icon>{{ hidePassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+          </button>
+          <mat-error *ngIf="registerForm.get('password')?.hasError('required')">Password is required</mat-error>
+          <mat-error *ngIf="registerForm.get('password')?.hasError('minlength')">Password must be at least 8 characters</mat-error>
+          <mat-error *ngIf="registerForm.get('password')?.hasError('pattern')">Password must contain at least one uppercase letter and one number</mat-error>
+          <mat-hint>Password must be at least 8 characters, one uppercase letter, and one number.</mat-hint>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Confirm Password</mat-label>
+          <input matInput [type]="hideConfirmPassword ? 'password' : 'text'" placeholder="Confirm Password" formControlName="confirmPassword" />
+          <button mat-icon-button type="button" (click)="toggleConfirmPasswordVisibility()" matSuffix>
+            <mat-icon>{{ hideConfirmPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
+          </button>
+          <mat-error *ngIf="registerForm.get('confirmPassword')?.hasError('passwordMismatch')">
+            Passwords do not match
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('confirmPassword')?.hasError('required')">
+            Confirm password is required
+          </mat-error>
+        </mat-form-field>
+
+      </div>
+
+      <!-- Second Column of Inputs -->
+      <div class="form-column">
+        <mat-form-field appearance="fill">
+          <mat-label>Phone Number</mat-label>
+          <input matInput placeholder="Phone Number" formControlName="phoneNumber" type="number" />
+          <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('minlength')">
+            Phone number must be at least 8 characters
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('pattern')">
+            Phone number must contain only numbers
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('phoneNumber')?.hasError('required')">
+            Phone number is required
+          </mat-error>
+
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>Address</mat-label>
+          <input matInput placeholder="Address" formControlName="address" />
+          <mat-error *ngIf="registerForm.get('address')?.hasError('required')">Address is required</mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="fill">
+          <mat-label>City</mat-label>
+          <input matInput placeholder="City" formControlName="city" />
+          <mat-error *ngIf="registerForm.get('city')?.hasError('required')">City is required</mat-error>
+        </mat-form-field>
+
+
+        <div class="profile-pic">
+          <input type="file" id="profilePic" (change)="onFileSelected($event)" style="display: none;"  accept="image/*"/>
+          <button mat-raised-button class="upload-button" type="button" (click)="triggerFileInput()" *ngIf="!imagePreview">
+            UPLOAD PROFILE PICTURE (OPTIONAL)
+          </button>
+
+          <!-- Image Preview Section -->
+          <div class="image-preview" *ngIf="imagePreview">
+            <img [src]="imagePreview" alt="Profile Preview" />
+            <button mat-icon-button aria-label="Remove Image" class="image-close-btn" type="button"(click)="clearImage()">
+              <mat-icon>close</mat-icon>
+            </button>
+          </div>
+        </div>
+
+
+
+      </div>
+    </div>
+
+
+
+    <div class="button-group">
+      <button mat-raised-button class="back-button" routerLink="/register">BACK</button>
+
+      <button mat-raised-button class="register-button" type="submit">REGISTER</button>
+
+    </div>
+
+  </form>
+</div>
