[ADD] - Initialize favorite events section

--- a/src/app/profile/profile-calendar/profile-calendar.component.css
+++ b/src/app/profile/profile-calendar/profile-calendar.component.css
@@ -14,10 +14,11 @@ h3 {
 }
 
 .firsBtnSet {
-  align-self: end;
+  margin-left: 100px;
 }
 
 .secondBtnSet {
+  margin-left: 100px;
 }
 
 /* Navigation Buttons */
