--- a/src/app/profile/favorite-events/favorite-events.component.html
+++ b/src/app/profile/favorite-events/favorite-events.component.html
@@ -1,1 +1,11 @@
-<p>favorite-events works!</p>
+<div class="events-cards">
+  <div class="row-events">
+
+    <div *ngFor="let event of favoriteEvents; let i = index" class="single-card-item">
+      <app-event-card [event]="event"></app-event-card>
+    </div>
+
+  </div>
+
+
+</div>
