[ADD] - Add favorite events and solutions

--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -46,6 +46,6 @@
   </mat-tab>
 
   <mat-tab label="Favorite Products/Services">
-    <app-favorite-solutions></app-favorite-solutions>
+    <app-favorite-solutions [favoriteSolutions] = "user.favoriteSolutions"></app-favorite-solutions>
   </mat-tab>
 </mat-tab-group>
