--- a/src/app/profile/profile-page/profile.component.html
+++ b/src/app/profile/profile-page/profile.component.html
@@ -50,14 +50,22 @@
         <div class = "information">
           <p><strong>Description:</strong> {{user.companyDescription}}</p>
         </div>
-        <button mat-raised-button class="btn deactivate-account"
-                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
-                *ngIf="this.user.role === 'SERVICE_PROVIDER'" (click)="openConfirmationDialog()">DEACTIVATE ACCOUNT</button>
 
         <button mat-raised-button class="btn"
                 [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
                 (click)="openChangePasswordDialog()"
                 *ngIf="this.user.role === 'SERVICE_PROVIDER'">CHANGE PASSWORD</button>
+
+
+        <button *ngIf="this.user.role === 'SERVICE_PROVIDER'"
+                mat-raised-button class="btn"
+                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
+                [routerLink]="'/my-solutions'">VIEW MY SOLUTIONS</button>
+
+
+        <button mat-raised-button class="btn deactivate-account"
+                [ngClass]="{ 'btn-pup': user.role === 'SERVICE_PROVIDER' }"
+                *ngIf="this.user.role === 'SERVICE_PROVIDER'" (click)="openConfirmationDialog()">DEACTIVATE ACCOUNT</button>
 
       </div>
 
