--- a/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
+++ b/src/app/solutions/pupservice-product-management/pupservice-product-management.component.html
@@ -1,7 +1,10 @@
-<mat-tab-group selectedIndex="1">
+<mat-tab-group selectedIndex="2">
   <mat-tab label="Products">
   </mat-tab>
   <mat-tab label="Services" >
     <app-pupservice-management></app-pupservice-management>
+  </mat-tab>
+  <mat-tab label="Price List">
+    <app-price-list-management></app-price-list-management>
   </mat-tab>
 </mat-tab-group>
